--- a/ASMBLL/ASMBLL.csproj
+++ b/ASMBLL/ASMBLL.csproj
@@ -31,8 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,26 +50,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionAppService.cs" />
-    <Compile Include="ActionAppStaffs.cs" />
-    <Compile Include="ActionAppUserGroupPush.cs" />
-    <Compile Include="ActionGet.cs" />
-    <Compile Include="ActionApp.cs" />
-    <Compile Include="ActionAppRole.cs" />
-    <Compile Include="ActionAppUserGroupMemberT.cs" />
-    <Compile Include="ActionAppUserGroupMemberS.cs" />
-    <Compile Include="ActionAppUserGroup.cs" />
-    <Compile Include="ActionAppList.cs" />
-    <Compile Include="ActionMenuItem.cs" />
-    <Compile Include="ActionListItem.cs" />
-    <Compile Include="DataOperateService.cs" />
-    <Compile Include="DataOperateServiceORA.cs" />
-    <Compile Include="DataOperateServiceAPI.cs" />
-    <Compile Include="DataOperateServiceSQL.cs" />
-    <Compile Include="IActionAppService.cs" />
-    <Compile Include="IDataOperateService.cs" />
-    <Compile Include="IGet.cs" />
-    <Compile Include="IActionApp.cs" />
+    <Compile Include="ActionApp\ActionService.cs" />
+    <Compile Include="ActionApp\ActionAppStaffs.cs" />
+    <Compile Include="ActionApp\ActionAppUserGroupPush.cs" />
+    <Compile Include="ActionApp\ActionGet.cs" />
+    <Compile Include="ActionApp\ActionApp.cs" />
+    <Compile Include="ActionApp\ActionAppRole.cs" />
+    <Compile Include="ActionApp\ActionAppUserGroupMemberT.cs" />
+    <Compile Include="ActionApp\ActionAppUserGroupMemberS.cs" />
+    <Compile Include="ActionApp\ActionAppUserGroup.cs" />
+    <Compile Include="ActionApp\ActionAppList.cs" />
+    <Compile Include="ActionApp\ActionMenuItem.cs" />
+    <Compile Include="ActionApp\ActionListItem.cs" />
+    <Compile Include="DataOperate\DataOperateService.cs" />
+    <Compile Include="DataOperate\DataOperateServiceORA.cs" />
+    <Compile Include="DataOperate\DataOperateServiceAPI.cs" />
+    <Compile Include="DataOperate\DataOperateServiceSQL.cs" />
+    <Compile Include="DataOperate\IDataOperateService.cs" />
+    <Compile Include="ActionApp\IActionGet.cs" />
+    <Compile Include="ActionApp\IActionApp.cs" />
     <Compile Include="MapClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
@@ -74,6 +82,10 @@
       <Project>{236FBB7B-0972-4289-B642-81AB05954D08}</Project>
       <Name>ClassLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
