--- a/ASMBLL_IntegrationTest/ASMBLL_IntegrationTest.csproj
+++ b/ASMBLL_IntegrationTest/ASMBLL_IntegrationTest.csproj
@@ -45,13 +45,15 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.2.1.1\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionAppListTests.cs" />
     <Compile Include="ActionAppRoleTests.cs" />
-    <Compile Include="ActionAppServiceTests.cs" />
     <Compile Include="ActionAppUserGroupMemberSTests.cs" />
     <Compile Include="ActionAppUserGroupMemberTTests.cs" />
     <Compile Include="ActionAppUserGroupTests.cs" />
